Attempt fix for buttons on consultation form appearing stretched on mobile.

--- a/app/makeup-consultation/page.module.css
+++ b/app/makeup-consultation/page.module.css
@@ -275,6 +275,7 @@
 .btnDiv {
     position: absolute;
     bottom: 0;
+    top: auto;
     left: 50%;
     transform: translateX(-50%);
     height: fit-content;
